app/css/main.css
/* Theme colors */
a {
  color: #FF4470;
}

h2 {
  font-size: 32px;
  font-weight: normal;
  line-height: 38px;
}

.hero,
.main-nav {
  background: #FFF;
}

.hero .hero-title,
.hero .hero-link,
.main-nav {
  color: #FF4470;
}

.hero .hero-title::after {
  background: #FF4470;
}

.grey-bg {
  background: #f5f5f5;
}

/* Tagname styles */
body {
  margin: 0;
  padding: 0;
  font-family: 'Google Sans', 'Roboto', 'Noto', sans-serif;
  -webkit-font-smoothing: antialiased;
  color: #222222;
  line-height: 1.5;
}

a {
  text-decoration: none;
}



article p {
  font-family: 'Roboto', 'Noto', sans-serif;
  font-size: 16px;
  line-height: 26px;
}

/* Code styles */
code, pre {
  font-family: 'Source Code Pro', 'Roboto Mono', Consolas, Menlo, monospace;
}

code {
  background: #F4F4F6;
  color: black;
  padding: 2px 4px;
}

pre code {
  padding: 0;
}

pre {
  font-size: 14px;
  padding: 24px;
  background: #F4F4F6;
  overflow-x: auto;
}

/* Top nav */
.main-nav {
  height: 60px;
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  box-shadow: 0 0 2px rgba(0,0,0,.2);
  display: flex;
  padding-left: 60px;
  justify-content: center;
  flex-direction: row;
  align-items: center;
  font-weight: 500;
  z-index: 1000;
}

.main-nav a {
  color: inherit;
}

.main-nav .nav-title {
  font-size: 18px;
}

.main-nav .flex {
  flex: 1;
}

.main-nav .nav-item {
  font-size: 14px;
  padding: 0 12px;
}

.main-nav .icon-github {
  margin-right: 20px;
  margin-left: 12px;
  width: 24px;
  height: 24px;
  background-size: cover;
}

/* Content area */
main {
  margin-top: 60px;
  display: flex;
  align-items: flex-start;
}

.wrapper {
  max-width: 1280px;
}

/* Landing page */
.hero .main-nav {
  position: static;
  background: none;
  box-shadow: none;
}

.hero .main-nav .nav-title {
  display: none;
}

.hero .wrapper {
  padding-top: 16vh;
  padding-bottom: 16vh;
}

.hero .hero-title {
  position: relative;
  margin-bottom: -14px;
  padding-right: 5%;
  font-size: 72px;
  font-weight: 400;
  line-height: 1.3em;
  text-indent: -4px;
}

.hero .hero-title::after {
  position: absolute;
  left: 0;
  bottom: 0px;
  height: 2px;
  width: 48px;
  content: "";
}

.hero .hero-caption {
  max-width: 640px;
  padding-right: 10%;
  line-height: 38px;
  font-size: 28px;
  font-weight: 400;
}

.hero .hero-link {
  font-size: 20px;
  font-weight: 500;
  text-transform: uppercase;
  text-decoration: none;
}

.hero .hero-link::before {
  display: inline-block;
  vertical-align: text-top;
  margin-right: 8px;
  content: url('data:image/svg+xml; utf8, <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><polygon id="➔" fill="#FF4470" points="21.5 12.4953271 16 18 13 18 17.4981689 13.5 3 13.5 3 11.5 17.4981689 11.5 13 7 16 7"></polygon></g></svg>');
}

section .wrapper {
  padding-top: 40px;
  padding-bottom: 40px;
}

.responsive-row {
  display: flex;
  margin-right: -20px;
}

.responsive-row > * {
  margin-right: 20px;
}

.center {
  align-items: center;
  justify-content: center;
}

/* Main/left nav */
.side-nav {
  /* position: sticky works in Chrome, Firefox, Safari and Edge;
  fallback to position: static for which the nav will just be part
  of the scrolling content. */
  position: -webkit-sticky;
  position: sticky;
  top: 60px;
  padding: 40px 40px 40px 0;
  width: 240px;
  font-size: 14px;
  font-weight: 500;
}

.side-nav > #toggleNavButton {
  display: none;
}

.side-nav > ul {
  margin: 0;
  padding: 0;
}

.side-nav > ul ul {
  padding-left: 24px;
  margin-bottom: 20px;
}

.side-nav li {
  list-style-type: none;
  margin: 10px 0;
  line-height: 22px;
}

/* Article area */
article {
  flex: 1;
  margin: 40px 0;
  /* Set min-width so article width will shrink
  (and code snippets will horizontally scroll). */
  min-width: 1px;
}

.prevnext {
  display: flex;
  justify-content: space-between;
}

.next {
  text-align: right;
  order: 2
}

.prev {
  order: 1
}

/* Footer */
footer {
  border-top: 1px solid #d9d9d9;
}

footer .wrapper {
  margin-top: 24px;
  /* No spacing between child elements. */
  font-size: 0px;
}

footer .group {
  display: inline-block;
  vertical-align: top;
  width: 240px;
  font-size: 14px;
  line-height: 24px;
  margin: 0 40px 24px 0;
}

footer .attribution {
  display: inline-block;
  vertical-align: top;
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 24px;
}



/* TODO: figure out if below rules are still needed */
/* table of contents. align the first set of bullets with the title. */
#table-of-contents + ul {
  list-style-type: none;
  padding: 0;
}

table {
  border-collapse: collapse;
}

thead {
  text-align: left;
  background-color: #F9F8FB;
  font-weight: 600;
}

tr {
  border-bottom: 1px solid #dadce0;
}

th, td {
  padding: 15px 20px;
}
/* TODO: figure out if above rules are still needed */



@media screen and (min-width: 1400px) {
  .wrapper {
    margin-left: auto;
    margin-right: auto;
  }
}
@media screen and (max-width: 1400px) {
  .wrapper {
    padding-left: 60px;
    padding-right: 60px;
  }
}
@media screen and (max-width: 1160px) {
  #secondary-nav {
    display: none;
  }
  .wrapper {
    padding-left: 32px;
    padding-right: 32px;
  }
  .side-nav {
    padding: 32px 24px 32px 0;
  }
  footer .group {
    margin-right: 24px;
  }
  .main-nav {
    padding-left: 32px;
  }
  article {
    margin: 32px 0;
  }
  .block {
    margin-bottom: 24px;
  }
}
@media screen and (max-width: 640px) {
  .main-nav {
    height: 56px;
    padding-left: 20px;
  }

  main {
    margin-top: 56px;
  }

  .hero .hero-title {
    font-size: 56px;
    line-height: 64px;
  }

  .hero .hero-caption {
    font-size: 22px;
    line-height: 32px;
  }

  .responsive-row {
    flex-direction: column;
  }

  /* doc page */
  .side-nav {
    position: fixed;
    top: 56px;
    left: 0;
    right: 0;
    padding: 0;
    width: auto;
    height: auto;
    background: #FFF;
    border-bottom: 1px solid rgba(0,0,0,.2);
  }

  .side-nav > ul {
    display: none;
  }

  .side-nav.open > ul {
    display: block;
    padding: 0 20px;
  }

  .side-nav > #toggleNavButton {
    display: block;
    width: 100%;
    height: 56px;
    padding: 0 20px;
    text-align: left;
    background: none;
    border: none;
    font-size: 16px;
    font-weight: bold;
    color: inherit;
    -webkit-appearance: none;
  }

  .side-nav > #toggleNavButton::before {
    content: '\25b6  ';
  }

  .side-nav.open > #toggleNavButton::before {
    content: '\25bc  ';
  }

  article {
    margin: 0;
    padding: 20px 0;
  }

  .side-nav + article {
    margin-top: 56px;
  }

  .wrapper {
    padding-left: 20px;
    padding-right: 20px;
  }

  footer .group {
    width: 50%;
    margin-right: 0;
  }
}

/* Animation */
.onload-fadein {
  transform: translate3d(0,0,0);
  animation-fill-mode: forwards;
  animation-name: fadein;
  animation-duration: 1s;
  opacity: 0;
}
@keyframes fadein {
  from {
    opacity:0;
    transform: translate3d(0,32px,0);
  }
  to {
    opacity:1;
    transform: translate3d(0,0,0);
  }
}

